Mejora logica en busqueda producto (#19)